clean more code

--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -77,7 +77,7 @@
                 <ion-card class="doc-card">
                     <ion-row *ngIf="docs.moc_certificate">
                         <ion-col size="3">
-                            <ion-icon (click)="onClickDowload(docs.moc_certificate, 'moc_certificate')"
+                            <ion-icon (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')"
                                 color="primary" 
                                 class="pdf-icon" 
                                 name="document-attach">
@@ -88,7 +88,7 @@
                         </ion-col>
                         <ion-col size="2">
                             <ion-icon
-                                (click)="onClickDowload(docs.moc_certificate, 'moc_certificate')"
+                                (click)="onClickDownload(docs.moc_certificate, 'moc_certificate')"
                                 color="primary"
                                 size="large"
                                 name="download"
@@ -100,7 +100,7 @@
                 <ion-card class="doc-card">
                     <ion-row *ngIf="docs.business_extract">
                         <ion-col size="3">
-                            <ion-icon (click)="onClickDowload(docs.business_extract, 'business_extract')"
+                            <ion-icon (click)="onClickDownload(docs.business_extract, 'business_extract')"
                                 color="primary" 
                                 class="pdf-icon" 
                                 name="document-attach">
@@ -111,7 +111,7 @@
                         </ion-col>
                         <ion-col size="2">
                             <ion-icon
-                                (click)="onClickDowload(docs.business_extract, 'business_extract')"
+                                (click)="onClickDownload(docs.business_extract, 'business_extract')"
                                 color="primary"
                                 size="large"
                                 name="download"
