--- a/src/app/pages/home/document-inventory/document-inventory.page.html
+++ b/src/app/pages/home/document-inventory/document-inventory.page.html
@@ -27,7 +27,7 @@
 				<ion-card class="doc-card">
 					<ion-row *ngIf="docs.moc_certificate">
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
+							<ion-icon (click)="onClickdownload(docs.moc_certificate, 'moc_certificate')"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -38,7 +38,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
+								(click)="onClickdownload(docs.moc_certificate, 'moc_certificate')"
 								color="primary"
 								size="large"
 								name="download"
@@ -50,7 +50,7 @@
 				<ion-card class="doc-card">
 					<ion-row *ngIf="docs.business_extract">
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(docs.business_extract, 'business_extract')"
+							<ion-icon (click)="onClickdownload(docs.business_extract, 'business_extract')"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -61,7 +61,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(docs.business_extract, 'business_extract')"
+								(click)="onClickdownload(docs.business_extract, 'business_extract')"
 								color="primary"
 								size="large"
 								name="download"
@@ -73,7 +73,7 @@
 				<ion-card class="doc-card">
 					<ion-row *ngIf="docs.vat_certificate">
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+							<ion-icon (click)="onClickdownload(docs.vat_certificate, 'vat_certificate')"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -84,7 +84,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+								(click)="onClickdownload(docs.vat_certificate, 'vat_certificate')"
 								color="primary"
 								size="large"
 								name="download"
@@ -96,7 +96,7 @@
 				<ion-card class="doc-card">
 					<ion-row *ngIf="docs.patent">
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(docs.patent, 'patent')"
+							<ion-icon (click)="onClickdownload(docs.patent, 'patent')"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -107,7 +107,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(docs.patent, 'patent')"
+								(click)="onClickdownload(docs.patent, 'patent')"
 								color="primary"
 								size="large"
 								name="download"
@@ -119,7 +119,7 @@
 				<ion-card class="doc-card">
 					<ion-row *ngIf="docs.gdt_card">
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+							<ion-icon (click)="onClickdownload(docs.gdt_card, 'gdt_card')"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -130,7 +130,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+								(click)="onClickdownload(docs.gdt_card, 'gdt_card')"
 								color="primary"
 								size="large"
 								name="download"
@@ -148,7 +148,7 @@
 				<ion-card  *ngFor="let doc of docs.others;let index = index" class="doc-card">
 					<ion-row>
 						<ion-col size="3">
-							<ion-icon (click)="dowloadPDF(doc.docUrl, doc.title)"
+							<ion-icon (click)="onClickdownload(doc.docUrl, doc.title)"
 								color="primary" 
 								class="pdf-icon" 
 								name="document-attach">
@@ -159,7 +159,7 @@
 						</ion-col>
 						<ion-col size="2">
 							<ion-icon
-								(click)="dowloadPDF(doc.docUrl, doc.title)"
+								(click)="onClickdownload(doc.docUrl, doc.title)"
 								color="primary"
 								size="large"
 								name="download"
@@ -176,8 +176,8 @@
 <!-- <ion-row class="ion-margin-top">
 	<ion-col *ngFor="let doc of docs.others" size="6">
 		<div>
-			<p><a (click)="dowloadPDF(doc.docUrl, doc.title)">{{ doc.titleInKhmer }}</a></p>
-			<ion-icon (click)="dowloadPDF(doc.docUrl, doc.title)"
+			<p><a (click)="onClickdownload(doc.docUrl, doc.title)">{{ doc.titleInKhmer }}</a></p>
+			<ion-icon (click)="onClickdownload(doc.docUrl, doc.title)"
 				color="primary" 
 				class="pdf-icon" 
 				name="document-attach">
