--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -118,6 +118,10 @@ ion-menu {
 
             ion-item {
                 font-size: 15px;
+
+                ion-icon {
+                    color: var(--ion-color-light);
+                }
             }
         }
     }
