clean code...and build tax form

--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -23,7 +23,7 @@
 					<ion-input type="text"></ion-input>
 				</ion-item>
 				<ion-item>
-					<ion-label position="floating">ចំណាយលើជួលអចលទ្រព្យ និងអចលទ្រព្យ៖</ion-label>
+					<ion-label position="floating">ចំណាយលើជួលចលទ្រព្យ និងអចលទ្រព្យ៖</ion-label>
 					<ion-input type="text"></ion-input>
 				</ion-item>
 				<ion-item>
