change form div to card

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -52,7 +52,7 @@
         </ion-header>
 
         <ion-content>
-            <div class="main-section border-primary">
+            <ion-card class="main-section border-primary">
                 <ion-grid class="second-section" fixed shadow>
                     <ion-row class="border-b">
                         <ion-col class="border-r" size="6">
@@ -99,7 +99,7 @@
                         </ion-col>
                     </ion-row>
                 </ion-grid>
-            </div>
+            </ion-card>
         </ion-content>
     </ion-router-outlet>
 </ion-app>
