--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -14,7 +14,7 @@
             <ion-list lines="none">
                 <!-- <ion-menu-toggle auto-hide="false" *ngFor="let page of pages"> -->
                     <div *ngFor="let page of pages">
-                        <ion-item *ngIf="page.path" [routerLink]="page.path" routerDirection="root">
+                        <ion-item *ngIf="page.path" (click)="goToOtherPage(page.path)">
                             <ion-icon class="ion-padding-end" [name]="page.icon" size="small" mode="md"></ion-icon>
                             {{page.name}}
                         </ion-item>
@@ -57,7 +57,7 @@
                     <ion-row class="border-b">
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToPageGeneral()">
+                                <div class="div-btn text-center" (click)="goToOtherPage('general')">
                                     <div>
                                         <ion-icon color="light" name="briefcase"></ion-icon>
                                     </div>
@@ -67,7 +67,7 @@
                         </ion-col>
                         <ion-col size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToPageObligation()">
+                                <div class="div-btn text-center" (click)="goToOtherPage('obligation')">
                                     <div>
                                         <ion-icon color="light" name="list"></ion-icon>
                                     </div>
@@ -79,7 +79,7 @@
                     <ion-row>
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToPageTaxCalculation()">
+                                <div class="div-btn text-center" (click)="goToOtherPage('tax-calculation')">
                                     <div>
                                         <ion-icon color="light" name="calculator"></ion-icon>
                                     </div>
