on tax calculation

--- a/src/global.scss
+++ b/src/global.scss
@@ -75,7 +75,7 @@ ion-toolbar{
 }
 
 ion-content {
-    --color: var(--ion-color-secondary);;
+    --color: var(--ion-color-secondary);
 }
 
 ion-card {
