--- a/src/app/pages/tax-calculation/tax-calculation.page.scss
+++ b/src/app/pages/tax-calculation/tax-calculation.page.scss
@@ -2,26 +2,43 @@ ion-content {
     .main-container {
         padding: 20px 15px 0 15px;
 
-        // ion-label {
-        //     color: var(--ion-color-primary);
-        // }
+        .card-wrapper {
+            width: 90%;
+            height: 50%;
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            margin: auto;
 
-        ion-item {
-            margin-bottom: 10px;
-        }
-
-        .tax-calculation-form {
-            border: 1px solid;
-            border-radius: 10px;
-        }
-
-        .result-list {
-            ion-item {
+            ion-card {
+                --color: #ffffff;
+                background-color: var(--ion-color-primary) !important;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
                 margin: 0;
-                
-                ion-label {
-                    margin: 0;
+                border-radius: 10px;
+                width: 100%;
+                height: 9rem;
+                margin-top: 10px;
+                display: flex;
+
+                .content-wrapper {
+                    width: fit-content;
+                    display: block;
+                    margin: auto;
+
+                    ion-icon {
+                        font-size: 4rem;
+                    }
+    
+                    ion-label {
+                        font-size: 18px;
+                    }
                 }
+
             }
         }
     }
