--- a/src/global.scss
+++ b/src/global.scss
@@ -51,15 +51,17 @@ ion-title {
 }
 
 ion-header {
+    // background-color: var(--ion-color-primary);
+    // height: 100px;
     z-index: 0;
     ion-popover { 
         --box-shadow: 5px 10px;
     }
 
-    ion-toolbar {
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-    }
+    // ion-toolbar {
+    //     border-bottom-left-radius: 10px;
+    //     border-bottom-right-radius: 10px;
+    // }
 }
 
 ion-tabs {
